Deploy on heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -18,15 +18,15 @@
 #   pool: 5
 #   timeout: 5000
 
-# production:
-#   adapter: sqlite3
-#   database: db/production.sqlite3
-#   pool: 5
-#   timeout: 5000
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: freight_exchange
+  username: postgres
+  password: root
+  host: localhost
+  port: 5432
 
-
-# # 3306 port 
-# # 5432
 development:
   adapter: postgresql
   encoding: unicode
