--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,6 @@
-# production:
-#   MERCHANT_KEY_ID:  'rzp_test_AXj9Wz0f8KRu5W'
-#   MERCHANT_KEY_SECRET:  'aeEuJQcHH2AeQkmJ0gSJ3Fes'
+production:
+  MERCHANT_KEY_ID:  'rzp_test_AXj9Wz0f8KRu5W'
+  MERCHANT_KEY_SECRET:  'aeEuJQcHH2AeQkmJ0gSJ3Fes'
 
 development:
   MERCHANT_KEY_ID:  'rzp_test_AXj9Wz0f8KRu5W'
